--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+            integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="crossorigin="anonymous"
+            referrerpolicy="no-referrer" />
         <!-- Bootstrap CSS -->
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -19,19 +23,23 @@
         <header>
             <nav class="navbar navbar-light bg_nav_white">
                 <div class="container">
-                   
-                    <a class="navbar-brand fw-bold fs-3"><img src="./img/unnamed.jpg" alt="" height=70> Campo Minato</a>
+
+                    <a class="navbar-brand fw-bold fs-3"><img
+                            src="./img/unnamed.jpg" alt="" height=70> Campo
+                        Minato</a>
                     <form class="d-flex">
                         <div class="input-group mb-3">
                             <label for="inputGroupSelect01" class="p-1">Difficoltà</label>
                             <select class="form-select" id="mylist">
-                              <option selected>Selezione la difficoltà del livello</option>
-                              <option value="1">Low</option>
-                              <option value="2">Medium</option>
-                              <option value="3">Hard</option>
+                                <option selected>Selezione la difficoltà del
+                                    livello</option>
+                                <option value="1">Low</option>
+                                <option value="2">Medium</option>
+                                <option value="3">Hard</option>
                             </select>
-                            <button type="button" class="btn_genera btn btn-dark">Play</button>
-                          </div>
+                            <button type="button" class="btn_genera btn
+                                btn-dark">Play</button>
+                        </div>
                     </form>
                 </div>
             </nav>
