--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                             </select>
                             <button type="button" class="btn_genera btn
                                 btn-dark">Play</button>
+                            <button type="button" class="btn_clear btn
+                                btn-dark">Clear</button>
                         </div>
                     </form>
                 </div>
